update: benchmark for literpc

--- a/cloud-demo/cloud-demo-web/src/main/resources/static/index.html
+++ b/cloud-demo/cloud-demo-web/src/main/resources/static/index.html
@@ -13,5 +13,10 @@
 			<a href="user/apitest">调用apitest,请看日志的输出</a>
 		</h2>
 	</div>
+	<div>
+		<h2>
+			<a href="user/benchmark">性能测试,请等待响应</a>
+		</h2>
+	</div>
 </body>
 </html>
